--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="author" content="Joel Almarza">
+  <meta name="google-signin-client_id" content="234146209472-s4vqv5en4m8fqg93sa837v8dr2v378m4.apps.googleusercontent.com">
+
+  <script src="https://apis.google.com/js/platform.js"></script>
   <!-- Favicon icon -->
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon.png">
   <!-- Bootstrap Core CSS -->
